# rag-example

rag-stack/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
rag-stack/backend/: Dockerfile  pyproject.toml
rag-stack/backend/app/: auth.py  config.py  db.py  deps.py  logging_conf.py  main.py  models.py  schemas.py
rag-stack/backend/app/ingest/: __init__.py  loaders.py  pipeline.py  splitter.py
rag-stack/backend/app/migrations/: env.py
rag-stack/backend/app/migrations/versions/: 0001_create_rag_chunks.py
rag-stack/backend/app/rag/: clients.py  embeddings.py  hybrid.py  prompt.py  rerank.py  retriever.py  service.py
rag-stack/backend/app/routes/: __init__.py  ask.py  health.py  ingest.py
rag-stack/backend/scripts/: bootstrap.sh
rag-stack/backend/tests/: conftest.py  test_ask.py  test_health.py  test_ingest.py
