[project]
name = "rag-stack-backend"
version = "0.1.0"
description = "RAG service with FastAPI, Postgres and Claude"
requires-python = "~=3.11"
authors = [{ name = "rag-stack" }]
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.30",
    "pydantic~=2.5",
    "pydantic-settings~=2.2",
    "sqlalchemy[asyncio]~=2.0",
    "psycopg[binary]~=3.1",
    "alembic~=1.13",
    "python-dotenv~=1.0",
    "anthropic~=0.25",
    "sentence-transformers~=2.6",
    "langchain~=0.1",
    "numpy~=1.26",
    "scikit-learn~=1.4",
    "rank-bm25~=0.2",
    "faiss-cpu~=1.7",
    "orjson~=3.10",
    "structlog~=24.1",
    "pypdf~=4.1",
    "beautifulsoup4~=4.12",
    "tenacity~=8.2",
    "python-multipart~=0.0.9",
    "pytz",
    "pgvector~=0.2",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "httpx~=0.27",
    "respx~=0.20",
    "pytest-mock~=3.12",
]

dev = [
    "ruff~=0.4",
    "black~=24.4",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "A", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["app"]
